@@ -297,18 +297,6 @@ OR条件によるバリデーションが利用できます。
         ]
     ];
 
-=head3 C<ルールの共有>
-
-すべてのパラメータでルールを共有することができます。
-共有ルールは制約表現のそれぞれのリストの先頭に
-追加されます。
-
-    $vc->shared_rule([
-        ['defined',   'Must be defined'],
-        ['trim'],
-        ['not_blank', 'Must be not blank']
-    ]);
-
 =head2 4. 制約関数の仕様
 
 制約関数の仕様を解説します。
