@@ -1,5 +1,6 @@
 0.1406
   added merge filter
+  deprecated shared_rule attribute
 0.1405
   updated document
 0.1404
